# geographic_data_partitioner

./: .gitignore  Cargo.toml  README.md
.history/: Cargo_20241212140709.toml  Cargo_20241212140714.toml  Cargo_20241212140823.toml  Cargo_20241212140828.toml  Cargo_20241212141327.toml
.history/src/: lib_20241212140423.rs  lib_20241212140535.rs  lib_20241212142358.rs  lib_20241212145017.rs  lib_20241212145021.rs  main_20241212140404.rs  main_20241212140412.rs  main_20241212140414.rs  main_20241212145704.rs  partitioner_20241212140145.rs  partitioner_20241212140347.rs  partitioner_20241212140605.rs  partitioner_20241212140922.rs  partitioner_20241212140942.rs  partitioner_20241212140955.rs  partitioner_20241212141119.rs  partitioner_20241212141241.rs  partitioner_20241212141258.rs  partitioner_20241212141320.rs  partitioner_20241212145000.rs  partitioner_20241212145350.rs  partitioner_20241212145616.rs  partitioner_20241212145635.rs  partitioner_20241212145746.rs
src/: lib.rs  main.rs  partitioner.rs
